--- a/_includes/favicons.html
+++ b/_includes/favicons.html
@@ -6,6 +6,9 @@
 {% capture favicon_path %}{{ '/assets/img/favicons' | relative_url }}{% endcapture %}
 
 <link rel="apple-touch-icon" sizes="180x180" href="{{ favicon_path }}/apple-touch-icon.png">
+<link rel="android-chrome-192x192" sizes="192x192" href="{{ favicon_path }}/android-chrome-192x192.png">
+<link rel="android-chrome-256x256" sizes="256x256" href="{{ favicon_path }}/android-chrome-256x256.png">
+<link rel="mstile-150x150" sizes="150x150" href="{{ favicon_path }}/mstile-150x150.png">
 <link rel="icon" type="image/png" sizes="32x32" href="{{ favicon_path }}/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="{{ favicon_path }}/favicon-16x16.png">
 <link rel="manifest" href="{{ favicon_path }}/site.webmanifest">
