--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -117,6 +117,19 @@ tail_includes:
   </div>
   {% endif %}
 
+  <div class="col-lg-8 col-md-10 mx-auto">
+    <hr />
+
+    <script src="https://utteranc.es/client.js"
+    repo="haecheol-shin/haecheol-shin.github.io"
+    issue-term="url"
+    theme="github-light"
+    crossorigin="anonymous"
+    async>
+    </script>
+    
+  </div>
+
   <div class="post-tail-bottom
     d-flex justify-content-between align-items-center mt-3 pt-5 pb-2">
     <div class="license-wrapper">
